# parquet2

./: .github_changelog_generator  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  print.html  requirements.txt  searchindex.js  searchindex.json  write_parquet.py
.github/workflows/: coverage.yml  docs.yml  test.yml
benches/: decode_bitpacking.rs  read_arrow2.rs
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/implementors/fallible_streaming_iterator/: trait.FallibleStreamingIterator.js
docs/implementors/parquet2/: trait.FallibleStreamingIterator.js
docs/implementors/streaming_decompression/: trait.Compressed.js  trait.Decompressed.js
docs/parquet2/: all.html  index.html  sidebar-items.js  trait.FallibleStreamingIterator.html
docs/parquet2/bloom_filter/: fn.hash_byte.html  fn.hash_native.html  fn.insert.html  fn.is_in_set.html  fn.read.html  index.html  sidebar-items.js
docs/parquet2/compression/: enum.Compression.html  enum.CompressionOptions.html  fn.compress.html  fn.create_codec.html  fn.decompress.html  index.html  sidebar-items.js  struct.BrotliCodec.html  struct.BrotliLevel.html  struct.GZipCodec.html  struct.GzipLevel.html  struct.Lz4Codec.html  struct.SnappyCodec.html  struct.ZstdCodec.html  struct.ZstdLevel.html  trait.Codec.html  trait.CompressionLevel.html
docs/parquet2/deserialize/: enum.BinaryPageState.html  enum.BooleanPageState.html  enum.DefLevelsDecoder.html  enum.FilteredHybridEncoded.html  enum.FixedLenBinaryPageState.html  enum.HybridEncoded.html  enum.NativePageState.html  fn.native_cast.html  index.html  sidebar-items.js  struct.FilteredHybridBitmapIter.html  struct.FixexBinaryIter.html  struct.HybridBitmapIter.html  struct.HybridRleBooleanIter.html  struct.HybridRleIter.html  struct.OptionalValues.html  struct.SliceFilteredIter.html  trait.HybridRleRunsIterator.html  type.Casted.html  type.FilteredHybridRleDecoderIter.html  type.HybridDecoderBitmapIter.html  type.HybridRleDecoderIter.html
docs/parquet2/encoding/: enum.Encoding.html  fn.ceil8.html  fn.get_length.html  index.html  sidebar-items.js
docs/parquet2/error/: enum.Error.html  enum.Feature.html  enum.ParquetError.html  index.html  sidebar-items.js  type.Result.html
docs/parquet2/indexes/: enum.BoundaryOrder.html  enum.FilteredPage.html  fn.compute_rows.html  fn.read_column.html  fn.read_page_locations.html  fn.select_pages.html  index.html  sidebar-items.js  struct.BooleanIndex.html  struct.ByteIndex.html  struct.FilteredPage.html  struct.FixedLenByteIndex.html  struct.Interval.html  struct.NativeIndex.html  struct.PageIndex.html  struct.PageLocation.html  trait.Index.html
docs/parquet2/metadata/: enum.ColumnOrder.html  enum.SortOrder.html  fn.get_sort_order.html  index.html  sidebar-items.js  struct.ColumnChunkMetaData.html  struct.ColumnDescriptor.html  struct.Descriptor.html  struct.FileMetaData.html  (+5 more)
examples/: read_metadata.rs
examples/s3/: Cargo.toml
guide/src/: README.md
integration/: write_pyarrow.py
integration-tests/: Cargo.toml  README.md
integration-tests/integration/: write_pyarrow.py
integration-tests/src/: lib.rs
parquet-tools/: Cargo.toml
src/: compression.rs  error.rs  errors.rs  lib.rs  parquet_bridge.rs  thrift_io_wrapper.rs  types.rs
src/bloom_filter/: mod.rs  read.rs  split_block.rs  write.rs
src/deserialize/: binary.rs  boolean.rs  filtered_rle.rs  fixed_binary.rs  fixed_len.rs  hybrid_rle.rs  integer.rs  mod.rs  native.rs  utils.rs  values.rs
src/encoding/: bitpacking.rs  hybrid_rle.rs  mod.rs  plain_byte_array.rs  uleb128.rs  zigzag_leb128.rs
src/indexes/: deserialize.rs  index.rs  intervals.rs  mod.rs  read.rs  write.rs
src/metadata/: column_chunk_metadata.rs  column_descriptor.rs  column_order.rs  column_path.rs  file_metadata.rs  mod.rs  parquet_metadata.rs  row_metadata.rs  schema_descriptor.rs  sort.rs
src/page/: mod.rs
src/read/: compression.rs  levels.rs  metadata.rs  mod.rs  page.rs  page_iterator.rs  page_stream.rs  stream.rs
src/schema/: mod.rs  parser.rs
src/serialization/: levels.rs  mod.rs
src/statistics/: binary.rs  boolean.rs  fixed_len_binary.rs  mod.rs  primitive.rs
src/write/: column_chunk.rs  compression.rs  dyn_iter.rs  file.rs  mod.rs  page.rs  row_group.rs  statistics.rs  stream.rs  stream_stream.rs
tests/: write_pyarrow.py
tests/it/: main.rs
(+558 files in other folders)
