[package]
name = "parquet2"
version = "0.10.3"
license = "Apache-2.0"
description = "Safe implementation of parquet IO."
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com", "Apache Arrow <dev@arrow.apache.org>"]
readme = "README.md"
edition = "2021"

[lib]
name = "parquet2"
bench = false

[dependencies]
parquet-format-async-temp = "0.3.0"
bitpacking = { version = "0.8.2", default-features = false, features = ["bitpacker1x"] }
streaming-decompression = "0.1"
bytemuck = { version = "1" }

async-stream = { version = "0.3.2", optional = true }
futures = { version = "0.3", optional = true }

snap = { version = "^1.0", optional = true }
brotli = { version = "^3.3", optional = true }
flate2 = { version = "^1.0", optional = true }
lz4 = { version = "1", optional = true }
zstd = { version = "^0.11", optional = true, default-features = false }

xxhash-rust = { version="0.8.3", optional = true, features = ["xxh64"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["snappy", "gzip", "lz4", "zstd", "brotli", "stream", "bloom_filter"]
snappy = ["snap"]
gzip = ["flate2"]
stream = ["futures", "async-stream"]
bloom_filter = ["xxhash-rust"]
