[package]
name = "parquet2"
version = "0.13.0"
license = "Apache-2.0"
description = "Safe implementation of parquet IO."
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com", "Apache Arrow <dev@arrow.apache.org>"]
keywords = [ "analytics", "parquet" ]
homepage = "https://github.com/jorgecarleitao/parquet2"
repository = "https://github.com/jorgecarleitao/parquet2"
readme = "README.md"
edition = "2021"

[lib]
name = "parquet2"
bench = false

[dependencies]
parquet-format-async-temp = "0.3.0"
bitpacking = { version = "0.8.2", default-features = false, features = ["bitpacker1x"] }
streaming-decompression = "0.1"

async-stream = { version = "0.3.2" }
futures = { version = "0.3" }

snap = { version = "^1.0", optional = true }
brotli = { version = "^3.3", optional = true }
flate2 = { version = "^1.0", optional = true }
lz4 = { version = "1.23.3", optional = true }
zstd = { version = "^0.11", optional = true, default-features = false }
lz4_flex = { version = "^0.9.2", optional = true }

xxhash-rust = { version="0.8.3", optional = true, features = ["xxh64"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
criterion = "0.3"

[features]
default = ["snappy", "gzip", "lz4", "zstd", "brotli", "bloom_filter"]
snappy = ["snap"]
gzip = ["flate2"]
bloom_filter = ["xxhash-rust"]

[[bench]]
name = "decode_bitpacking"
harness = false

[[bench]]
name = "decode_rle"
harness = false
